# GrimoireLabDeployments

./: README.md
openfe/: README.md  docker-compose.yml
openfe/settings/: gen_projects.py  projects.json  set_gh_token.sh  setup-docker.cfg  setup-secured.cfg  setup.cfg
openff/: README.md  docker-compose.yml
openff/settings/: gen_projects.py  projects.json  setup-opensearch.cfg  setup.cfg
