[general]
short_name = GrimoireLab
update = true
min_update_delay = 60
debug = false
logs_dir = /home/grimoire/logs
bulk_size = 100
scroll_size = 100
aliases_file = /home/grimoire/aliases.json

[projects]
projects_file = /home/grimoire/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
autorefresh = true

[sortinghat]
host = nginx
user = root
password = root
port = 8000
path = /identities/api/
ssl = false
database = sortinghat_db
autoprofile = [github, git]
matching = [email,name,username]
sleep_for = 100
unaffiliated_group = Unknown
affiliate = true

[panels]
kibiter_time_from = now-90d
kibiter_default_index = git
kibiter_url = http://kibiter:5601
kibiter_version = 6.8.6-3
github-comments = true
github-repos = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

#[confluence]
#no-archive = true
#raw_index = confluence_demo_raw
#enriched_index = confluence_demo_enriched

#[discourse]
#raw_index = discourse_demo_raw
#enriched_index = discourse_demo_enriched
#no-archive = true

[git]
raw_index = git_demo_raw
enriched_index = git_demo_enriched
latest-items = true
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[github]
api-token = <insert_token_here>
raw_index = github_raw
sleep-for-rate = true
sleep-time = "300"
enriched_index = github_enriched

#[github:pull]
#raw_index = github_pull_raw
#enriched_index = github_pull_enriched
#api-token = ghp_XXX
#category = pull_request
#sleep-for-rate = true
#no-archive = true

[github:repo]
raw_index = github_repositories-raw
enriched_index = github_repositories
api-token = <insert_token_here>
category = repository
sleep-for-rate = true
no-archive = true

[github2:issue]
api-token = <insert_token_here>
raw_index = github2_issues-raw
enriched_index = github2_issues
sleep-for-rate = true
category = issue
no-archive = true

[github2:pull]
api-token = <insert_token_here>
raw_index = github2_pull_requests-raw
enriched_index = github2-pull_requests
sleep-for-rate = true
category = pull_request
no-archive = true

#[slack]
#raw_index = slack_demo_raw
#enriched_index = slack_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true

#[twitter]
#raw_index = twitter_demo_raw
#enriched_index = twitter_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true
#sleep-for-rate = true
#sleep-time = 300

## studies based on enriched indexes

[enrich_demography:git]

[enrich_areas_of_code:git]
in_index = git_demo_raw
out_index = git-aoc_demo_enriched

[enrich_onion:git]
in_index = git
out_index = git-onion_demo_enriched
contribs_field = hash
